force-app/main/default/objects/VoiceCall/fields/GC_agent_participant_id__c.field-meta.xml
<CustomField>
    <fullName>GC_agent_participant_id__c</fullName>
    <description>Genesys Cloud agent participant ID for wrap-up code application</description>
    <label>GC Agent Participant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>