force-app/main/default/objects/VoiceCall/fields/GC_Copilot_communication_id__c.field-meta.xml
<CustomField>
    <fullName>GC_Copilot_communication_id__c</fullName>
    <description>Genesys Cloud communication ID for wrap-up code application</description>
    <label>GC Copilot Communication ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>