force-app/main/default/objects/VoiceCall/fields/GC_Copilot_participant_id__c.field-meta.xml
<CustomField>
    <fullName>GC_Copilot_participant_id__c</fullName>
    <description>Genesys Cloud participant ID for Copilot data</description>
    <label>GC Copilot Participant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>