force-app/main/default/objects/VoiceCall/fields/GC_Copilot_reason_text__c.field-meta.xml
<CustomField>
    <fullName>GC_Copilot_reason_text__c</fullName>
    <description>Reason details generated by Genesys Cloud Copilot</description>
    <label>GC Copilot Reason Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>