force-app/main/default/objects/VoiceCall/fields/GC_Copilot_resolution_confidence__c.field-meta.xml
<CustomField>
    <fullName>GC_Copilot_resolution_confidence__c</fullName>
    <description>Confidence score (0-1) for the resolution details</description>
    <label>GC Copilot Resolution Confidence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>