force-app/main/default/objects/VoiceCall/fields/GC_Copilot_session_summary_id__c.field-meta.xml
<CustomField>
    <fullName>GC_Copilot_session_summary_id__c</fullName>
    <description>Genesys Cloud session summary ID from Copilot API response</description>
    <label>GC Copilot Session Summary ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>