force-app/main/default/objects/VoiceCall/fields/GC_Copilot_summary_text__c.field-meta.xml
<CustomField>
    <fullName>GC_Copilot_summary_text__c</fullName>
    <description>Call summary generated by Genesys Cloud Copilot</description>
    <label>GC Copilot Summary Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>