force-app/main/default/objects/VoiceCall/fields/GC_Copilot_wrap_up_1_confidence__c.field-meta.xml
<CustomField>
    <fullName>GC_Copilot_wrap_up_1_confidence__c</fullName>
    <description>Confidence score (0-1) for the primary wrap-up code suggestion</description>
    <label>GC Copilot Wrap-up 1 Confidence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>