force-app/main/default/objects/VoiceCall/fields/GC_Copilot_wrap_up_1_id__c.field-meta.xml
<CustomField>
    <fullName>GC_Copilot_wrap_up_1_id__c</fullName>
    <description>Unique identifier for the primary wrap-up code suggestion</description>
    <label>GC Copilot Wrap-up 1 ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>