force-app/main/default/objects/VoiceCall/fields/GC_Copilot_wrap_up_3_name__c.field-meta.xml
<CustomField>
    <fullName>GC_Copilot_wrap_up_3_name__c</fullName>
    <description>Tertiary wrap-up code name suggested by Genesys Cloud Copilot</description>
    <label>GC Copilot Wrap-up 3 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>