force-app/main/default/objects/VoiceCall/fields/GC_Interaction_Id__c.field-meta.xml
<CustomField>
    <fullName>GC_Interaction_Id__c</fullName>
    <description>Genesys Cloud interaction ID for the voice call</description>
    <label>GC Interaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>